# src/main/java/com/yeshenko/process/controller/v1/ProcessServiceApiDelegateImpl.java
@@ -2,6 +2,7 @@ package com.yeshenko.process.controller.v1;
 
 import com.yeshenko.process.api.v1.ProcessApiDelegate;
 import com.yeshenko.process.models.v1.BuildProcessRequestDto;
+import com.yeshenko.process.models.v1.CreateProcess200ResponseDto;
 import com.yeshenko.process.models.v1.CreateProcessRequestDto;
 import com.yeshenko.process.models.v1.ProcessEntityDto;
 import com.yeshenko.process.models.v1.TaskCompleteDto;
@@ -23,9 +24,9 @@ public class ProcessServiceApiDelegateImpl implements ProcessApiDelegate {
   }
 
   @Override
-  public ResponseEntity<UUID> createProcess(CreateProcessRequestDto createProcessRequestDto) {
-    return ResponseEntity.ok(processEntityService
-        .createProcess(createProcessRequestDto.getProcessDefinitionId()));
+  public ResponseEntity<CreateProcess200ResponseDto> createProcess(CreateProcessRequestDto createProcessRequestDto) {
+    return ResponseEntity.ok(new CreateProcess200ResponseDto().processInstanceId(processEntityService
+        .createProcess(createProcessRequestDto.getProcessDefinitionId())));
   }
 
   @Override
@@ -37,5 +38,10 @@ public class ProcessServiceApiDelegateImpl implements ProcessApiDelegate {
   public ResponseEntity<Void> completeTask(TaskCompleteDto taskCompleteDto) {
     processEntityService.completeTask(taskCompleteDto);
     return ResponseEntity.ok().build();
+  }
+
+  @Override
+  public ResponseEntity<byte[]> getBinaryData(UUID documentId) {
+    return ResponseEntity.ok(processEntityService.getDocumentBinaryData(documentId));
   }
 }
